Implemented css to enhance calculator appearance

--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 <body>
     <div class="container"></div>
-    <div id="display">0</div>
+    
+   
+    <div class="calculator"><div class="display-box"><div id="display2"></div> <div id="display"></div></div>
     <div class="num-div"><button type="button" class="numbers" value="0"> 0</button><button type="button"
             class="numbers" value="1">1</button><button class="numbers" value="2">2</button><button type="button"
             class="numbers" value="3">3</button><button type="button" class="numbers" value="4">4</button><button
             class="numbers" value="5">5</button><button type="button" class="numbers" value="6">6</button><button
             type="button" class="numbers" value="7">7</button><button type="button" class="numbers"
-            value="8">8</button><button type="button" class="numbers" value="9">9</button><button type="button"
+            value="8">8</button><button type="button" class="numbers" value="9">9</button> <button type="button"
             class="clear-btn">clear</button>
-        <div class="signs"><button id="equals-btn">=</button>
+        <button id="equals-btn">=</button>
             
             <button class="operator" value="+">+</button><button class="operator" value="-">-</button><button
                 class="operator" value="/">/</button><button class="operator" value="*">*</button>
-        </div>
-    </div>
+        </div></div>
+   
 </body>
 
 </html>
